# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
# The default resolver for workspaces is different than for regular packages, so use v2 to avoid warnings
resolver = "2"
members = [
  "adapters/cloud/in_memory_mock_cloud_adapter",
  "adapters/data/http_mock_data_adapter",
  "adapters/data/in_memory_mock_data_adapter",
  "adapters/data/managed_subscribe_data_adapter",
  "adapters/data/mqtt_data_adapter",
  "adapters/data/sample_grpc_data_adapter",
  "adapters/digital_twin/ibeji_adapter",
  "adapters/digital_twin/in_memory_mock_digital_twin_adapter",
  "adapters/digital_twin/mock_digital_twin_adapter",
  "adapters/mapping/in_memory_mock_mapping_adapter",
  "adapters/mapping/mock_mapping_service_adapter",
  "build_common",
  "common",
  "freyja",
  "mocks/mock_digital_twin",
  "mocks/mock_mapping_service",
  "proc_macros",
]

[workspace.dependencies]
# Freyja dependencies
freyja-build-common = { path = "build_common" }
freyja-common = { path = "common" }
freyja-contracts = { path = "contracts" }
http-mock-data-adapter = { path = "adapters/data/http_mock_data_adapter" }
in-memory-mock-cloud-adapter = { path = "adapters/cloud/in_memory_mock_cloud_adapter" }
in-memory-mock-data-adapter = { path = "adapters/data/in_memory_mock_data_adapter" }
in-memory-mock-digital-twin-adapter = { path ="adapters/digital_twin/in_memory_mock_digital_twin_adapter" }
in-memory-mock-mapping-adapter = { path = "adapters/mapping/in_memory_mock_mapping_adapter" }
managed-subscribe-data-adapter = { path = "adapters/data/managed_subscribe_data_adapter" }
mock-digital-twin = { path = "mocks/mock_digital_twin" }
mock-digital-twin-adapter = { path = "adapters/digital_twin/mock_digital_twin_adapter" }
mock-mapping-service-adapter = { path = "adapters/mapping/mock_mapping_service_adapter" }
mqtt-data-adapter = { path = "adapters/data/mqtt_data_adapter" }
proc-macros = { path = "proc_macros" }
sample-grpc-data-adapter = { path = "adapters/data/sample_grpc_data_adapter" }

# Other SDV projects. Versioning is handled by the Cargo.lock file
core-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji" }
samples-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji" }
service_discovery_proto = { git = "https://github.com/eclipse-chariott/chariott" }

# crates.io dependencies
async-trait = "0.1.77"
axum = "0.6.12"
config = "0.13.4"
convert_case = "0.6.0"
env_logger = "0.10.1"
futures = "0.3.30"
home = "0.5.9"
log = "^0.4"
mockall = "0.11.4"
paho-mqtt = "0.12"
proc-macro2 = "1.0.70"
quote = "1.0.23"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.3"
syn = { version = "2.0.40", features = ["extra-traits", "full"] }
tempfile = "3.9.0"
time = "0.3.31"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time", "sync", "test-util"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tonic = "0.10.0"
tonic-build = "0.10.0"
tower = { version = "0.4", features = ["util"] }
uuid = "1.6.1"