# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
# The default resolver for workspaces is different than for regular packages, so use v2 to avoid warnings
resolver = "2"
members = [
  "adapters/cloud/grpc_cloud_adapter",
  "adapters/cloud/in_memory_mock_cloud_adapter",
  "adapters/data/http_mock_data_adapter",
  "adapters/data/in_memory_mock_data_adapter",
  "adapters/data/managed_subscribe_data_adapter",
  "adapters/data/mqtt_data_adapter",
  "adapters/data/sample_grpc_data_adapter",
  "adapters/digital_twin/grpc_digital_twin_adapter",
  "adapters/digital_twin/in_memory_mock_digital_twin_adapter",
  "adapters/digital_twin/mock_digital_twin_adapter",
  "adapters/mapping/in_memory_mock_mapping_adapter",
  "adapters/mapping/mock_mapping_service_adapter",
  "adapters/service_discovery/file_service_discovery_adapter",
  "adapters/service_discovery/grpc_service_discovery_adapter",
  "build_common",
  "common",
  "freyja",
  "mocks/mock_digital_twin",
  "mocks/mock_mapping_service",
  "proc_macros",
  "proto/cloud_connector",
]

[workspace.dependencies]
# Freyja dependencies
grpc-service-discovery-adapter = { path = "adapters/service_discovery/grpc_service_discovery_adapter" }
cloud-connector-proto = { path = "proto/cloud_connector" }
file-service-discovery-adapter = { path = "adapters/service_discovery/file_service_discovery_adapter" }
freyja-build-common = { path = "build_common" }
freyja-common = { path = "common" }
http-mock-data-adapter = { path = "adapters/data/http_mock_data_adapter" }
grpc-digital-twin-adapter = { path = "adapters/digital_twin/grpc_digital_twin_adapter" }
in-memory-mock-cloud-adapter = { path = "adapters/cloud/in_memory_mock_cloud_adapter" }
in-memory-mock-data-adapter = { path = "adapters/data/in_memory_mock_data_adapter" }
in-memory-mock-digital-twin-adapter = { path ="adapters/digital_twin/in_memory_mock_digital_twin_adapter" }
in-memory-mock-mapping-adapter = { path = "adapters/mapping/in_memory_mock_mapping_adapter" }
managed-subscribe-data-adapter = { path = "adapters/data/managed_subscribe_data_adapter" }
mock-digital-twin = { path = "mocks/mock_digital_twin" }
mock-digital-twin-adapter = { path = "adapters/digital_twin/mock_digital_twin_adapter" }
mock-mapping-service-adapter = { path = "adapters/mapping/mock_mapping_service_adapter" }
mqtt-data-adapter = { path = "adapters/data/mqtt_data_adapter" }
proc-macros = { path = "proc_macros" }
sample-grpc-data-adapter = { path = "adapters/data/sample_grpc_data_adapter" }

# Other SDV projects. Versioning is handled by the Cargo.lock file
core-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji" }
samples-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji" }
service_discovery_proto = { git = "https://github.com/eclipse-chariott/chariott" }

# crates.io dependencies
async-trait = "0.1.77"
axum = "0.7.4"
config = "0.14.0"
convert_case = "0.6.0"
env_logger = "0.11.2"
futures = "0.3.30"
home = "0.5.9"
log = "^0.4"
mockall = "0.12.1"
paho-mqtt = "0.12"
proc-macro2 = "1.0.78"
prost = "0.12"
prost-types = "0.12"
quote = "1.0.23"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = "0.26.1"
strum_macros = "0.26.1"
syn = { version = "2.0.40", features = ["extra-traits", "full"] }
tempfile = "3.10.0"
time = "0.3.34"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time", "sync", "test-util"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
tower = { version = "0.4", features = ["util"] }
uuid = "1.7.0"