# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "freyja-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
config = { workspace = true }
freyja-contracts = { workspace = true }
home = { workspace = true }
log = { workspace = true }
proc-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }