# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "data-adapter-selector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
freyja-common = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
grpc-data-adapter = { workspace = true }