# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "dts"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
dts-contracts = { path = "../contracts" }
proc-macros = { path = "../proc_macros" }
freyja-deps = { path = "../depgen/__generated" }

tokio = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
env_logger = { workspace = true }
provider-proxy-selector = { path = "../provider_proxy_selector"}
crossbeam = { workspace = true }

[dev-dependencies]
in-memory-mock-cloud-adapter = { path = "../cloud_adapters/in_memory_mock_cloud_adapter"}