# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "freyja"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
env_logger = { workspace = true }
freyja-common = { workspace = true }
log = { workspace = true }
proc-macros = { workspace = true }
provider-proxy-selector = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

grpc-provider-proxy-v1 = { path = "../provider_proxies/grpc/v1" }
http-mock-provider-proxy = { path = "../provider_proxies/http_mock_provider_proxy" }
in-memory-mock-provider-proxy = { path = "../provider_proxies/in_memory_mock_provider_proxy" }
managed-subscribe-provider-proxy = { path = "../provider_proxies/managed_subscribe" }
mqtt-provider-proxy = { path = "../provider_proxies/mqtt" }

[dev-dependencies]
# Dependencies for testing
mockall = { workspace = true }
async-trait = { workspace = true }

# Dependencies for examples
in-memory-mock-cloud-adapter = { workspace = true }
in-memory-mock-digital-twin-adapter = { workspace = true }
in-memory-mock-mapping-adapter = { workspace = true }
mock-digital-twin-adapter = { workspace = true }
mock-mapping-service-adapter = { workspace = true }
