# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "freyja"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
data-adapter-selector = { workspace = true }
env_logger = { workspace = true }
freyja-common = { workspace = true }
log = { workspace = true }
proc-macros = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

grpc-data-adapter = { workspace = true }
http-mock-data-adapter = { workspace = true }
in-memory-mock-data-adapter = { workspace = true }
managed-subscribe-data-adapter = { workspace = true }
mqtt-data-adapter = { workspace = true }

[dev-dependencies]
# Dependencies for testing
mockall = { workspace = true }
async-trait = { workspace = true }

# Dependencies for examples
in-memory-mock-cloud-adapter = { workspace = true }
in-memory-mock-digital-twin-adapter = { workspace = true }
in-memory-mock-mapping-adapter = { workspace = true }
mock-digital-twin-adapter = { workspace = true }
mock-mapping-service-adapter = { workspace = true }
