# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "freyja"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
env_logger = { workspace = true }
file-service-discovery-adapter = { workspace = true }
freyja-common = { workspace = true }
grpc-cloud-adapter = { workspace = true }
grpc-digital-twin-adapter = { workspace = true }
grpc-mapping-adapter = { workspace = true }
grpc-service-discovery-adapter = { workspace = true }
log = { workspace = true }
managed-subscribe-data-adapter = { workspace = true }
mqtt-data-adapter = { workspace = true }
proc-macros = { workspace = true }
sample-grpc-data-adapter = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# Dependencies for testing
freyja-test-common = { workspace = true }

# Dependencies for examples
in-memory-mock-cloud-adapter = { workspace = true }
in-memory-mock-digital-twin-adapter = { workspace = true }
in-memory-mock-data-adapter = { workspace = true }
in-memory-mock-mapping-adapter = { workspace = true }