# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "provider-proxy-selector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
crossbeam = { workspace = true }
freyja-contracts = { workspace = true }
grpc-provider-proxy-v1 = { path = "../provider_proxies/grpc/v1" }
http-mock-provider-proxy = { path = "../provider_proxies/http_mock_provider_proxy" }
in-memory-mock-provider-proxy = { path = "../provider_proxies/in_memory_mock_provider_proxy" }
log = { workspace = true }
proc-macros = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
