# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "provider-proxy-selector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
crossbeam = { workspace = true }
freyja-contracts = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
grpc-provider-proxy-v1 = { path = "../provider_proxies/grpc/v1" }