# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "azure-cloud-connector-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { path = "../../common" }
dts-contracts = { path = "../../contracts" }
azure-cloud-connector-proto = { path = "../../cloud_connectors/azure/proto-build/" }
tonic = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true}
tokio = { workspace = true}
futures = { workspace = true }
tower = { workspace = true }
tokio-stream = { workspace = true }
tempfile = { workspace = true }