# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "in-memory-mock-cloud-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
dts-contracts = { path = "../../contracts" }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true}
tokio = { workspace = true}
time = { workspace = true }