# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "ibeji-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
common = { path = "../../common" }
core-protobuf-data-access  = { workspace = true }
dts-contracts = { path = "../../contracts"}
futures = { workspace = true }
log = { workspace = true }
proc-macros = { path = "../../proc_macros" }
provider-proxy-selector = { path = "../../provider_proxy_selector" }
serde = { workspace = true }
serde_json = { workspace = true }
service_discovery_proto = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }