# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "mock-digital-twin-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
dts-contracts = { path = "../../contracts" }
mock-digital-twin = { path = "../../mocks/mock_digital_twin"}
async-trait = { workspace = true }
httptest = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }