# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "mock-mapping-service-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
common = { path = "../../common" }
dts-contracts = { path = "../../contracts" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true}