# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "mock-mapping-service-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
freyja-build-common = { workspace = true }
freyja-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }

[build-dependencies]
freyja-build-common = { workspace = true }