# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "mock-digital-twin"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { workspace = true }
env_logger = { workspace = true }
freyja-build-common = { workspace = true }
freyja-common = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
http-mock-provider-proxy = { path = "../../provider_proxies/http_mock_provider_proxy" }

[build-dependencies]
freyja-build-common = { workspace = true }