# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "mock-mapping-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { workspace = true }
env_logger = { workspace = true }
freyja-common = { workspace = true }
freyja-contracts = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
home = { workspace = true }

[build-dependencies]
freyja-build-common = { workspace = true }