# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "http-mock-provider-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
dts-contracts = { path = "../../contracts"}
proc-macros = { path = "../../proc_macros" }
mock-digital-twin = { path = "../../mocks/mock_digital_twin" }
async-trait = { workspace = true }
crossbeam = { workspace = true }
tower = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
