# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "http-mock-provider-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
crossbeam = { workspace = true }
freyja-common = { workspace = true }
freyja-contracts = { workspace = true  }
log = { workspace = true }
mock-digital-twin = { workspace = true }
proc-macros = { workspace = true  }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }

[build-dependencies]
freyja-build-common = { workspace = true }